syntax="proto3";

package auth_v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/folloff/auth-ms-go/pkg/auth_v1;auth_v1";

service UserV1 {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

/** PREDEFINED */
message UUID {
  string value = 1;
}

enum ERole {
  ROLE_USER = 0;
  ROLE_ADMIN = 1;
}

/** USER */
message UserInput {
  string name = 1;
  string email = 2;
  ERole role = 3;
  string password = 4;
  string password_confirm = 5;
}

message UserPublicData {
  UUID public_id = 1;
  string name = 2;
  string email = 3;
  ERole role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;

}

message User {
  uint64 id = 1;
  UUID public_id = 2;
  UserInput data = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

/** CREATE */
message CreateUserRequest {
  UserInput input = 1;
}

message CreateUserResponse {
  UUID public_id = 1;
}

/** GET */
message GetUserRequest {
  UUID public_id = 1;
}

message GetUserResponse {
  UserPublicData data = 1;
}

/** UPDATE */
message UpdateUserRequest {
  UUID public_id = 1;
  string name = 2;
  string email = 3;
}

message UpdateUserResponse {}

/** DELETE */
message DeleteUserRequest {
  UUID public_id = 1;
}

message DeleteUserResponse {}
